# pats-model

./: .gitignore  Cargo.toml  README.md  config.yaml
.cargo/: config.toml
.github/workflows/: main.yml
docs/: book.toml  crates.js  index.html  search-index.js  settings.html  source-files.js
docs/pats/: all.html  fn.main.html  index.html  sidebar-items.js  static.ALLOCATOR.html  type.Float.html
docs/pats/constants/: constant.NS_C_EARTH.html  constant.WE_C_EARTH.html  constant.WGS84_A.html  constant.WGS84_B.html  constant.WGS84_E.html  constant.WGS84_H.html  index.html  sidebar-items.js
docs/pats/errors/: enum.ConfigError.html  enum.EnvironmentError.html  enum.InputError.html  enum.ModelError.html  enum.ParcelError.html  enum.ProjectionError.html  enum.SearchError.html  index.html  sidebar-items.js
docs/pats/model/: fn.main.html  fn.prepare_parcels_list.html  index.html  sidebar-items.js  struct.Core.html  type.Float.html
docs/src/pats/: constants.rs.html  errors.rs.html  main.rs.html  model.rs.html
guide/: book.toml
guide/src/: SUMMARY.md  intro.md  tech-docs.md  tech.md  theory.md  using.md
guide/src/tech/: domain.md  gribs.md  parcels.md  proj.md
src/: constants.rs  errors.rs  main.rs  model.rs  super_tests.rs
src/html/: docs-header.html
src/model/: configuration.rs  environment.rs  mod.rs  parcel.rs  super_tests.rs  vec3.rs
src/model/environment/: accesser.rs  bisection.rs  buffer.rs  fields.rs  finite_difference.rs  interpolation.rs  mod.rs  projection.rs  surfaces.rs
src/model/parcel/: conv_params.rs  logger.rs  mod.rs  (+1 more)
test-data/: config.yaml
utils/: .gitignore  displacement.py  download_era5.py
utils/archive/: cape.py  displacement.py
utils/compare_chart/: carto_plot.py  colormaps.py  plot.py  radar_reader.py
(+96 files in other folders)
