# Copyright 2021 Jakub Lewandowski

# This file is part of Parcel Ascent Tracing System (PATS).

# Parcel Ascent Tracing System (PATS) is a free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3 of the License, or
# (at your option) any later version.

# Parcel Ascent Tracing System (PATS) is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
# GNU General Public License for more details.

# You should have received a copy of the GNU General Public License
# along with Parcel Ascent Tracing System (PATS). If not, see https://www.gnu.org/licenses/.

[package]
name = "pats"
version = "0.0.1"
edition = "2018"
publish = false
authors = ["Jakub Lewandowski <scaleweather@gmail.com>"]
keywords = ["meteorology", "numerical", "forecasting"]
categories = ["mathematics", "science", "command-line-utilities"]
license = "GPL-3.0"
exclude = [".github/*", ".vscode/*", ".idea/*", "data/*"]

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_yaml = "0.8.21"
ndarray = "0.15.3"
rayon = "1.5.1"
thiserror = "1.0.30"
log = "0.4.14"
env_logger = "0.9.0"
chrono = { version = "0.4.19", features = ["serde"] }
rustc-hash = "1.1.0"
eccodes = "0.5.4"
floccus = "0.2.2"
nalgebra = "0.29.0"
cap = "0.1.0"
csv = "1.1.6"
indicatif = "0.16.2"

[features]
double_precision = ["floccus/double_precision"]
3d = []
raw_output = []

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "./src/html/docs-header.html" ]
